# bumper-robot

./: README.md  build.sh
src/nitrabot_bumper/: CMakeLists.txt  package.xml
src/nitrabot_bumper/firmware/: bumper_driver.ino  test_bumper.ino
src/nitrabot_bumper/firmware/bumper_driver/: bumper_driver.ino
src/nitrabot_bumper/launch/: nitrabot_bumper.launch  nitrobot_bumper.launch
src/nitrabot_control/: CMakeLists.txt  package.yml
src/nitrabot_control/launch/: nitrabot_control.launch
src/nitrabot_control/scripts/: bumper_control_node
src/nitrabot_control/src/bumper_control/: bumper_control.py
src/nitrabot_control/src/robot_communication/: robot_communication.cpp  robot_data.cpp
src/nitrabot_dockerfiles/: Dockerfile  docker-compose.yml
src/nitrabot_dockerfiles/install/: i_dep.sh
src/nitrabot_launch/: CMakeLists.txt  package.xml
src/nitrabot_launch/launch/: nitrobot_bringup.launch
